name:                pisp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pisp#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Types,
                       Operations,
                       Marshal,
                       Output,
                       PyMonad,
                       Scheme.Types,
                       Scheme.Program

  build-depends:       base,
                       bytestring,
                       binary,
                       utf8-string,
                       filepath,
                       directory,
                       time,
                       mtl,
                       parsec,
                       containers

Test-Suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       HUnit,
                       pisp,
                       filepath,
                       directory,
                       bytestring,
                       time,
                       process,
                       mtl
  other-modules:       Util,
                       BasicTests,
                       TestPyMonad
  
